css/electrum.css
body {
    margin: 0;
    padding: 0;
    font-size: 100%;
    background: #222222;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
    line-height: 1.6;
}

code, pre {
    font-family: ui-monospace, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
    font-size: 0.9em;
}

img {
    max-width: 100%;
    height: auto;
}

a img {
    border: none;
}
a {
    text-decoration: none;
    color: #33aaff;
}
a:focus-visible {
    outline: 2px solid #77ccff;
    outline-offset: 2px;
}
a:focus {
    color: #77ccff;
}
a:hover {
    color: #77ccff;
}
a:active {
    color: #77ccff;
}

.downloads a {
    color: #33aaff;
}
.downloads a:focus,
.downloads a:hover {
    color: #77ccff;
}


/** Layout
 */
#content {
    background: #113344;
    color: #dddddd;
}

.features a{
    color: #ffffff;
}


.wrapper {
    margin: 0 auto;
    max-width: 940px;
    padding: 0 16px;
    clear: left;
}

.clear {
    clear: both;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    overflow: hidden;
    clip-path: inset(50%);
    white-space: nowrap;
}


/** Header
 */
#header {
    height: 100px;
    background: #1a1a1a;
    color: #ffffff;
    border-bottom: 1px solid #333333;
}


#logo {
    padding: 15px 0px;
    float: left;
    width: 380px;
    line-height:1.5;
}

#header-right {
    float: right;
}

#electrum_text {
    width: 300px;
    height: 42px;
    display: block;
    background: url(../logo/electrum_text_tron_color.svg) no-repeat 0 0;
    background-size: 300px 38px;
}

#electrum_text span, #electrum_logo img { position:absolute; top:100%; left:-99999px; }
	
#logo_subtitle {
    font-weight:300;
    font-size:100%;
    color: #5588ff;

}
	
#electrum_logo {
    width: 70px;
    height: 66px;
    display: block;
    float: right;
    /* the SVG has ~5.5% blank margin around the glyph; oversize and shift up
       so the glyph top stays flush with the wordmark */
    background: url(../logo/electrum_logo_color.svg) no-repeat 50% -4px;
    background-size: 71px 71px;
}



#menu {
    font-size: 90%;
    float:right;
}


/** Site notice
 */
#site-notice {
    background: #2b2314;
    border-bottom: 1px solid rgba(255, 201, 102, 0.25);
    color: #ffc966;
    font-size: 90%;
    text-align: center;
}

#site-notice p {
    margin: 0;
    padding: 9px 0;
}

#site-notice a {
    color: #ffc966;
    text-decoration: underline;
}

#site-notice a:hover,
#site-notice a:focus {
    color: #ffe0a3;
}



ul.navigation {
    float: right;
    list-style-type: none;
}

ul.navigation li {
    float: left;
    list-style-type: none;
    line-height: 30px;
    height: 30px;
}

ul.navigation li a {
    float: left;
    margin-left: 20px;
}



/** Social toolbar
 */
#social-icons {
    margin-top: 10px;
    float:right;
}

#social-icons a {
    display: inline-block;
    line-height: 0;
}

#social-icons a + a {
    margin-left: 6px;
}

#social-icons a:hover img,
#social-icons a:focus img {
    opacity: 0.85;
}

h2 {
    font-size: 1.5em;
    line-height: 1.25;
    margin-bottom: 1.00em;
    font-weight: 600;
}
h3 {
    font-size: 1.2em;
    line-height: 1.25;
    margin-bottom: 1.00em;
    font-weight: 600;
}

#footer {
    padding-top: 20px;
    padding-bottom: 20px;
    color: #ddd;
    font-size: 90%;
}

#footer a,
#header a {
    text-decoration: none;
    color: #ffffff;
}

#footer a:hover,
#header a:hover {
    color: #ddd;
}

#footer p {
    margin: 0 5px;
}

#footer .col1 {
    width: 50%;
    float: left;
}
#footer .col2 {
    width: 50%;
    text-align: right;
    float: left;
}

hr {
    height: 1px;
    border: 0;
    background-color: #aaa;
}

/** Slideshow
 */

.slideshow {
    position: relative;
    width: auto;
    max-width: 940px;
    aspect-ratio: 940 / 400;
    overflow: hidden;
    margin-top: 47px;
    background-color: black;
}

.slideshow > div {
    width: 100%;
}

.slideshow img {
    display: block;
    width: 100%;
    height: auto;
}


.slideshow .caption {
    position: absolute;
    margin-left: 50px;
    margin-top: 50px;
    padding: 12px 20px;
    color: #f8f8f8;
    background-color: rgba(10, 10, 10, 0.82);
    border-radius: 6px;
}

.slideshow .caption h3 {
    color: #f8f8f8;
    font-size: 22px;
    margin: 0;
    padding: 0;
}

.slideshow .caption a {
    text-decoration: none;
    color: #b0b0b0;
}

.slideshow .caption a:hover {
    color: #ffffff;
}

/** Panel
 */
.page {
    padding: 1px 0 30px 0;
    display: none;
}

/** Home page
 */

.button {
    display: inline-block;
    font-size: 1.5em;
    padding: 12px 32px;
    color: #fff;
    background-color: #3468bb;
    font-weight: 300;
    text-decoration: none;
    border-radius: 8px;
    transition: background-color .15s ease;
}
.button:visited { color: #fff; }
.button:hover, .button:active, .button:focus { color: #fff; background-color: #3d78d6; }
.button:active { position: relative; top: 1px; }
	



div.featured-space {
    height: 60px;
}


h2.icon {
    background-position: 0px 0px;
    background-repeat: no-repeat;
    padding-left: 60px;
    padding-top: 30px;
    line-height: 24px;
    height: 64px;
}

h2.icon-seed {
    background-image: url('../icons/features/neg_icon_seed.png');
}
h2.icon-safe {
    background-image: url('../icons/features/neg_icon_box.png');
}
h2.icon-exit {
    background-image: url('../icons/features/neg_icon_exit.png');
}
h2.icon-clock {
    background-image: url('../icons/features/neg_icon_clock.png');
}
h2.icon-blitz {
    background-image: url('../icons/features/neg_icon_blitz.png');
}
h2.icon-spv {
    background-image: url('../icons/features/neg_icon_shield.png');
}
h2.icon-multisig {
    background-image: url('../icons/features/neg_icon_multisig.png');
}
h2.icon-cold {
    background-image: url('../icons/features/neg_icon_cold.png');
}
h2.icon-plugins {
    background-image: url('../icons/features/neg_icon_round.png');
}

.features {
    clear: both;
}


.features p {
    margin-top: -50px;
}


.feature-item {
    width: 32%;
    line-height: 150%;
    float: left;
    margin-right: 2%;
}

.feature-item.last {
    margin-right: 0px;
}

/** Downloads
 */
.downloads {
    color: #dddddd;
    background-color: #0d2836;
    border: 1px solid rgba(255, 255, 255, 0.15);
    border-radius: 8px;
}

div.downloads {
    padding: 12px 16px;
}

table {
    border-collapse: separate;
    border-spacing: 0;
    margin-bottom: 1.4em;
    width: 100%;
}

table.downloads {
    overflow: hidden;
}

table.downloads img {
    vertical-align: middle;
    margin-right: 8px;
}

td {
    border-top: 1px solid rgba(255, 255, 255, 0.12);
    vertical-align: middle;
}

table.downloads tr:first-child td {
    border-top: 0;
}

th, td, caption {
    padding: 10px 14px;
}


.clear {
    clear: left;
}

/** Navigation between panels --> START
    see https://dev.to/hakash/100-pure-htmlcss-page-navigation---no-javascript-required-2em5
 */
/* This hides all pages */
.page {
    display: none;
}

/* This displays the first page */
.default {
    display: block;
}

/* This displays the page corresponding to the one you clicked on */
:target {
    display: block;
}

/* This hides the default page when another page is clicked */
:target ~ .default {
    display: none;
}
/** Navigation between panels <-- END
 */


/** Responsive adjustments for small screens
 */
@media (max-width: 760px) {
    #header {
        height: auto;
        padding: 8px 0 12px;
    }
    #logo {
        float: none;
        width: auto;
    }
    #electrum_text {
        width: 200px;
        height: 28px;
        background-size: 200px 25px;
    }
    #header-right {
        float: none;
    }
    #social-icons {
        float: none;
        margin: 8px 0 0;
    }
    #menu {
        float: none;
    }
    ul.navigation {
        float: none;
        margin: 6px 0 0;
        padding-left: 0;
    }
    ul.navigation li {
        float: none;
        display: inline-block;
    }
    ul.navigation li a {
        float: none;
        margin: 0 16px 0 0;
    }
    .slideshow .caption {
        margin: 12px;
        padding: 6px 12px;
    }
    .slideshow .caption h3 {
        font-size: 16px;
    }
    .slideshow .caption p,
    .slideshow .caption a {
        display: none;
    }
    .feature-item {
        width: 100%;
        float: none;
        margin: 0 0 8px;
    }
    #footer .col1,
    #footer .col2 {
        width: 100%;
        float: none;
    }
    #footer .col2 {
        text-align: left;
    }
    table.downloads {
        display: block;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
    }
    #download code {
        overflow-wrap: anywhere;
    }
}

